Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21473

QML: "horizontalAlignment: Text.AlignHCenter" is not working with richtext format.

    XMLWordPrintable

Details

    • I3542d7fb49ec1ea370709c799167ec01cf5ed19c

    Description

      "horizontalAlignment: Text.AlignHCenter" is not working if the text is in richtext format. If the text is plain text then it works. This is a regression bug and this cannot be reproduced with Qt 4.7.3.

      I attached QmlTextAlign.qml that can be used to reproduce this. You can use the attached patch.diff to fix this error to Qt 4.7.4.

      Additional information:
      QTBUG 18617 is same kind of bug but this patch do not fix it

      Attachments

        1. QmlTextAlign.qml
          0.2 kB
        2. patch.diff
          0.6 kB
        For Gerrit Dashboard: QTBUG-21473
        # Subject Branch Project Status CR V

        Activity

          People

            bodson Yann Bodson (Inactive)
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes