Text.AlignHCenter should work with a text in richtext format

The alignment should work if you have a QML Text Element like: "<b>Hello world</b>" and the horizontalAlignment is Text.AlignHCenter

Task-number: QTBUG-21473